Fix hor scrollbar and edge margins

--- a/styles.css
+++ b/styles.css
@@ -22,9 +22,11 @@
     box-sizing: border-box;
 }
 
+
+
 .main-container {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 
     display: grid;
     grid-template: var(--header-size) 1fr / var(--sidebar-size) 1fr;
@@ -67,10 +69,12 @@
 
 .menu-option {
     height: var(--sidebar-item-size);
+    margin-left: var(--small-gap);
+
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    gap: var(--small-gap);
+    gap: var(--medium-gap);
 }
 
 nav div,
@@ -165,6 +169,7 @@ nav div,
 .sidecards {
     display: grid;
     grid-template-rows: repeat(2, var(--main-gap) 280px) 1fr;
+    margin-right: var(--main-gap);
 }
 
 .body .sidecards > .card {
@@ -179,7 +184,7 @@ nav div,
 
 /* projects */
 .body .cards-container {
-    margin-left: var(--main-gap);
+    margin-left: var(--medium-gap);
 }
 
 .body .cards {
@@ -188,6 +193,8 @@ nav div,
     grid-template-rows: var(--main-gap);
     grid-auto-rows: 200px;
     gap: var(--medium-gap);
+
+    margin-bottom: var(--main-gap);
 }
 
 .body .cards > h3 {
